force-app/main/default/objects/Outbound_Call_Result__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Study_Level__c</fullName>
        <formula>TEXT(Case__r.Lead__r.Study_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead - Study Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Lead Object - Used in case of PreApp Domestic and International</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Outbound Calls</relationshipLabel>
        <relationshipName>Outbound_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <description>Used by SR Outbound Calls Team</description>
        <formula>Application_Course_Preference__r.Citizenship_Country__c</formula>
        <label>Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts_Parsed__c</fullName>
        <formula>VALUE(TEXT(Number_Of_Attempts__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Attempts (Parsed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <inlineHelpText>Make this value +1 with each call attempt. (Note: Leave this as 0 for &quot;Not Available&quot;)</inlineHelpText>
        <label>Number Of Attempts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <description>Used By Outbound Call Team</description>
        <formula>Application_Course_Preference__r.Offer_Date__c</formula>
        <label>Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Lapse_Date__c</fullName>
        <description>Used by SR Outbound Call teams</description>
        <formula>Application_Course_Preference__r.Offer_Response_Date__c</formula>
        <label>Offer Lapse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Callback Requested</fullName>
                </value>
                <value>
                    <fullName>No Response Trigger</fullName>
                </value>
                <value>
                    <fullName>System Generated</fullName>
                </value>
                <value>
                    <fullName>JRG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>IF(Owner:Queue.QueueName = &quot;&quot;, (Owner:User.FirstName + &quot; &quot; + Owner:User.LastName), Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <formula>Contact__r.Person_ID_unique__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <label>Preferred Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7am to 8am</fullName>
                </value>
                <value>
                    <fullName>8am to 9am</fullName>
                </value>
                <value>
                    <fullName>9am to 10am</fullName>
                </value>
                <value>
                    <fullName>10am to 11am</fullName>
                </value>
                <value>
                    <fullName>11am to 12pm</fullName>
                </value>
                <value>
                    <fullName>12pm to 1pm</fullName>
                </value>
                <value>
                    <fullName>1pm to 2pm</fullName>
                </value>
                <value>
                    <fullName>2pm to 3pm</fullName>
                </value>
                <value>
                    <fullName>3pm to 4pm</fullName>
                </value>
                <value>
                    <fullName>4pm to 5pm</fullName>
                </value>
                <value>
                    <fullName>5pm to 6pm</fullName>
                </value>
                <value>
                    <fullName>6pm to 7pm</fullName>
                </value>
                <value>
                    <fullName>7pm to 8pm</fullName>
                </value>
                <value>
                    <fullName>8pm to 9pm</fullName>
                </value>
                <value>
                    <fullName>9pm to 10pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Country_Of_Study__c</fullName>
        <label>Preferred Country Of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADELIE LAND (FRANCE)</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Study_Destination__c</fullName>
        <label>Preferred Study Destination</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_For_Decision__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Home country</fullName>
                </value>
                <value>
                    <fullName>Other international destination</fullName>
                </value>
                <value>
                    <fullName>Undisclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_Closing__c</fullName>
        <label>Reason For Closing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call Result - Yes</fullName>
                </value>
                <value>
                    <fullName>Contacted - Other Channels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_Decision__c</fullName>
        <label>Reason For Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Decision__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accepted Another Monash Course</fullName>
                </value>
                <value>
                    <fullName>Accepted Offer At Another Institution</fullName>
                </value>
                <value>
                    <fullName>Accepted Offer from Monash Malaysia</fullName>
                </value>
                <value>
                    <fullName>Already Accepted Offer</fullName>
                    <isActive>false</isActive>
                    <label>Already Accepted Offer</label>
                </value>
                <value>
                    <fullName>Already Deferred</fullName>
                </value>
                <value>
                    <fullName>Already Enrolled Online</fullName>
                    <isActive>false</isActive>
                    <label>Already Enrolled Online</label>
                </value>
                <value>
                    <fullName>Applying At Another Institution</fullName>
                </value>
                <value>
                    <fullName>Applying For Another Monash Course</fullName>
                </value>
                <value>
                    <fullName>Assessing Value</fullName>
                </value>
                <value>
                    <fullName>Better Employment Outcomes</fullName>
                </value>
                <value>
                    <fullName>Better Ranked</fullName>
                </value>
                <value>
                    <fullName>Campus location is too far from CBD Jakarta</fullName>
                </value>
                <value>
                    <fullName>Cannot meet the condition on time</fullName>
                </value>
                <value>
                    <fullName>Cannot study evening class</fullName>
                </value>
                <value>
                    <fullName>Cannot study Saturday class</fullName>
                </value>
                <value>
                    <fullName>China-Aus Gov Tension</fullName>
                </value>
                <value>
                    <fullName>China-Study Advice</fullName>
                </value>
                <value>
                    <fullName>Considering Monash courses</fullName>
                </value>
                <value>
                    <fullName>Considering multiple offers</fullName>
                </value>
                <value>
                    <fullName>Considering Other Institutions</fullName>
                </value>
                <value>
                    <fullName>Continue Studies From Previous Institution</fullName>
                </value>
                <value>
                    <fullName>Could Not Meet Condition</fullName>
                </value>
                <value>
                    <fullName>Course not offered at Monash</fullName>
                </value>
                <value>
                    <fullName>Course structure/timetable</fullName>
                </value>
                <value>
                    <fullName>COVID-19 Uncertainty with travel bans</fullName>
                    <label>COVID-19 Uncertainty</label>
                </value>
                <value>
                    <fullName>COVID-19 Uncertainty with PSW visa</fullName>
                </value>
                <value>
                    <fullName>COVID-19 Unsafe to travel</fullName>
                </value>
                <value>
                    <fullName>COVID-19 Victoria</fullName>
                </value>
                <value>
                    <fullName>Credit Exemptions - Referred To Faculty</fullName>
                </value>
                <value>
                    <fullName>Decided not to study at this time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reasons_Not_To_Study__c</fullName>
        <label>Reasons Not To Study</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_For_Decision__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Could Not Meet Condition</fullName>
                </value>
                <value>
                    <fullName>COVID-19</fullName>
                </value>
                <value>
                    <fullName>Does not want to study online</fullName>
                </value>
                <value>
                    <fullName>Family / Personal Reasons</fullName>
                </value>
                <value>
                    <fullName>Financial Reasons</fullName>
                </value>
                <value>
                    <fullName>No CSP offer</fullName>
                </value>
                <value>
                    <fullName>No longer interested</fullName>
                </value>
                <value>
                    <fullName>No online study option</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Undisclosed</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_To_Academic_Current_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referred To Academic / Current Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retention_Status__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Engagement_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CoP</fullName>
                </value>
                <value>
                    <fullName>COVID-19 Victoria</fullName>
                </value>
                <value>
                    <fullName>Declined Offer</fullName>
                </value>
                <value>
                    <fullName>Deferred Offer</fullName>
                </value>
                <value>
                    <fullName>Enrolled (New Student)</fullName>
                </value>
                <value>
                    <fullName>Firm Discontinue</fullName>
                </value>
                <value>
                    <fullName>Firm Intermission</fullName>
                </value>
                <value>
                    <fullName>Going Ok / Likely To Stay</fullName>
                </value>
                <value>
                    <fullName>Plans To Accept</fullName>
                </value>
                <value>
                    <fullName>Plans To Continue</fullName>
                </value>
                <value>
                    <fullName>Plans to Enrol</fullName>
                </value>
                <value>
                    <fullName>Retained</fullName>
                </value>
                <value>
                    <fullName>Some Difficulties / Could Be At Risk</fullName>
                </value>
                <value>
                    <fullName>Still Deciding</fullName>
                </value>
                <value>
                    <fullName>Unrelated to Retention</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied / Likely To Leave</fullName>
                </value>
                <value>
                    <fullName>Already Enrolled</fullName>
                </value>
                <value>
                    <fullName>Currently receiving additional support</fullName>
                </value>
                <value>
                    <fullName>Does not require additional support</fullName>
                </value>
                <value>
                    <fullName>Going OK / Back on Track</fullName>
                </value>
                <value>
                    <fullName>Reconsidering study / Likely to leave</fullName>
                </value>
                <value>
                    <fullName>Requires additional support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Category_V2__c</fullName>
        <label>Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Progress</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Study Online</fullName>
                </value>
                <value>
                    <fullName>COVID-19</fullName>
                </value>
                <value>
                    <fullName>COVID-19 Victoria</fullName>
                </value>
                <value>
                    <fullName>Dislike Online Study</fullName>
                </value>
                <value>
                    <fullName>Employment/Internship</fullName>
                </value>
                <value>
                    <fullName>Family Support</fullName>
                </value>
                <value>
                    <fullName>Financial Considerations</fullName>
                </value>
                <value>
                    <fullName>IT/Technology Constraints</fullName>
                </value>
                <value>
                    <fullName>Medical/Health</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Military Service</fullName>
                </value>
                <value>
                    <fullName>Needs To Secure Placement</fullName>
                </value>
                <value>
                    <fullName>Other Study Conflicts</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Study Break</fullName>
                </value>
                <value>
                    <fullName>Studying Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Travel/Pursue Travel</fullName>
                </value>
                <value>
                    <fullName>Travel Restrictions</fullName>
                </value>
                <value>
                    <fullName>Undecided About Finishing Study</fullName>
                </value>
                <value>
                    <fullName>Units Not Available Next Semester</fullName>
                </value>
                <value>
                    <fullName>Wants To Stay In Online Mode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <description>Field to describe the Risk Category for OCR records</description>
        <label>Risk Category (multi)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic progress</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Study Online</fullName>
                </value>
                <value>
                    <fullName>COVID-19</fullName>
                </value>
                <value>
                    <fullName>Dislike Online Study</fullName>
                </value>
                <value>
                    <fullName>Employment/Internship</fullName>
                </value>
                <value>
                    <fullName>Family Support</fullName>
                </value>
                <value>
                    <fullName>Financial Considerations</fullName>
                </value>
                <value>
                    <fullName>IT/Technology Constraints</fullName>
                </value>
                <value>
                    <fullName>Medical/Health</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Military Service</fullName>
                </value>
                <value>
                    <fullName>Other Study Conflicts</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Study Break</fullName>
                </value>
                <value>
                    <fullName>Travel/Pursue Travel</fullName>
                    <label>Travel</label>
                </value>
                <value>
                    <fullName>Travel Restrictions</fullName>
                </value>
                <value>
                    <fullName>Undecided About Finishing Study</fullName>
                </value>
                <value>
                    <fullName>Units Not Available Next Semester</fullName>
                </value>
                <value>
                    <fullName>Does not wish to disclose reason</fullName>
                </value>
                <value>
                    <fullName>Parental / Carer&apos;s leave</fullName>
                </value>
                <value>
                    <fullName>Unhappy With Monash Experience</fullName>
                </value>
                <value>
                    <fullName>Needs To Secure Placement</fullName>
                </value>
                <value>
                    <fullName>Studying Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Studying another Monash course</fullName>
                </value>
                <value>
                    <fullName>Wants To Stay In Online Mode</fullName>
                </value>
                <value>
                    <fullName>Assessment Fails</fullName>
                </value>
                <value>
                    <fullName>Consecutive Assessment Fails</fullName>
                </value>
                <value>
                    <fullName>Employment/Internship/Placement</fullName>
                </value>
                <value>
                    <fullName>First Assessment Failed</fullName>
                </value>
                <value>
                    <fullName>Low Moodle Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <inlineHelpText>Low -&gt; No need for additional support and can keep going on their own.
                Medium/High -&gt; May dropout and need additional support to keep going.</inlineHelpText>
        <label>Perceived Risk of Dropout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Going Ok / Likely To Stay</fullName>
                </value>
                <value>
                    <fullName>Some Difficulties / Could Be At Risk</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied / Likely To Leave</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                    <isActive>false</isActive>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <isActive>false</isActive>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <isActive>false</isActive>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Medium/High</fullName>
                    <isActive>false</isActive>
                    <label>Medium/High</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Summary__c</fullName>
        <label>Risk Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Risk_Assessment__c</fullName>
        <description>Field to capture risk assessment</description>
        <label>Student Risk Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Session_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Study Session Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submission_Location__c</fullName>
        <formula>Application_Course_Preference__r.Submission_location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Information__c</fullName>
        <label>Unit Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTAC_ID__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Used by SR team for Outbound Call.</description>
        <formula>Contact__r.VTAC_Id__c</formula>
        <label>VTAC ID</label>
        <type>Text</type>
    </fields>
    <label>Outbound Call</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Arts</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Faculty__c</columns>
        <columns>Call_Status__c</columns>
        <columns>Call_Result__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Number_Of_Attempts__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Faculty__c</field>
            <operation>equals</operation>
            <value>FACULTY OF ARTS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Outbound_Call_Result__c.MonCon_Support</value>
        </filters>
        <label>All: Arts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Arts</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_BusEco_Outbound_Call_Records</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Faculty__c</columns>
        <columns>Call_Status__c</columns>
        <columns>Call_Result__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Number_Of_Attempts__c</columns>
        <columns>Study_Session_Booked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Faculty__c</field>
            <operation>equals</operation>
            <value>FACULTY OF BUSINESS AND ECONOMICS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Outbound_Call_Result__c.MonCon_Support</value>
        </filters>
        <label>All: BusEco</label>
        <sharedTo>
            <role>BusEco_Berwick</role>
            <role>BusEco_Clayton</role>
            <role>BusEco_Peninsula</role>
            <role>BusEco_Short_Courses_Team</role>
            <role>Business_and_Economics</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Education_Outbound_Call_Records</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Faculty__c</columns>
        <columns>Call_Status__c</columns>
        <columns>Call_Result__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Number_Of_Attempts__c</columns>
        <columns>Study_Session_Booked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Faculty__c</field>
            <operation>equals</operation>
            <value>FACULTY OF EDUCATION</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Outbound_Call_Result__c.MonCon_Support</value>
        </filters>
        <label>All: Education</label>
        <sharedTo>
            <role>Education</role>
        </sharedTo>
    </listViews>
</CustomObject>